# docs/swagger.json
@@ -15,6 +15,13 @@
       {
         "name": "Users",
         "description": "API for users in the system"
+      },
+      {
+        "name": "Checks",
+        "description": "API for checks in the system"
+      },{
+        "name": "Report",
+        "description": "API for detailed uptime reports"
       }
 
     ],
@@ -111,44 +118,236 @@
           }
         }
       },
-
-    "/users/login": {
-      "post": {
-        "summary": "Login user",
-        "tags": [
-          "Users"
-        ],
-        "description": "Login user in system",
-        "parameters": [
-          {
-            "name": "user",
-            "in": "body",
-            "description": "Login user",
-            "schema": {
-              "$ref": "#/definitions/UserLogin"
+      "/users/login": {
+        "post": {
+          "summary": "Login user",
+          "tags": [
+            "Users"
+          ],
+          "description": "Login user in system",
+          "parameters": [
+            {
+              "name": "user",
+              "in": "body",
+              "description": "Login user",
+              "schema": {
+                "$ref": "#/definitions/UserLogin"
+              }
+            }
+          ],
+          "produces": [
+            "application/json"
+          ],
+          "responses": {
+            "200": {
+              "description": "Login Success"
+            },
+            "422":{
+              "description": "Unprocessable Entity"
+            },
+            "400":{
+              "description": "Invalid Credentials!"
+            },
+            "500":{
+              "description": "User login failed!!"
             }
           }
-        ],
-        "produces": [
-          "application/json"
-        ],
-        "responses": {
-          "200": {
-            "description": "Login Success"
-          },
-          "422":{
-            "description": "Unprocessable Entity"
-          },
-          "400":{
-            "description": "Invalid Credentials!"
-          },
-          "500":{
-            "description": "User login failed!!"
+        }
+      },
+      "checks": {
+        "get": {
+          "summary": "get all checks for this user",
+          "tags": [
+            "Checks"
+          ],
+          "description": "Get all checks",
+          "parameters": [
+            {
+              "name": "user",
+              "in": "body",
+              "description": "Login user",
+              "schema": {
+                "$ref": "#/definitions/UserLogin"
+              }
+            }
+          ],
+          "produces": [
+            "application/json"
+          ],
+          "responses": {
+            "200": {
+              "description": "Login Success"
+            },
+            "422":{
+              "description": "Unprocessable Entity"
+            },
+            "400":{
+              "description": "Invalid Credentials!"
+            },
+            "500":{
+              "description": "User login failed!!"
+            }
+          }
+        }
+      },
+      "/checks": {
+        "post": {
+          "summary": "Create new  check",
+          "tags": [
+            "Checks"
+          ],
+          "description": "Create new  check",
+          "parameters": [
+            {
+              "name": "name",
+              "in": "body",
+              "schema": {
+                "$ref": "#/definitions/Check"
+              }
+            },
+            {
+              "name": "token",
+              "in": "header"
+            }
+          ],
+          "produces": [
+            "application/json"
+          ],
+          "responses": {
+            "200": {
+              "description": "Login Success"
+            },
+            "422":{
+              "description": "Unprocessable Entity"
+            },
+            "400":{
+              "description": "Invalid Credentials!"
+            },
+            "500":{
+              "description": "User login failed!!"
+            }
+          }
+        }
+      },
+      "/checks/{id}": {
+        "put": {
+          "summary": "Edit check",
+          "tags": [
+            "Checks"
+          ],
+          "description": "Edit check",
+          "parameters": [
+            {
+              "name": "name",
+              "in": "body",
+              "schema": {
+                "$ref": "#/definitions/Check"
+              }
+            },
+            {
+              "name": "token",
+              "in": "header"
+            }
+          ],
+          "produces": [
+            "application/json"
+          ],
+          "responses": {
+            "200": {
+              "description": "Login Success"
+            },
+            "422":{
+              "description": "Unprocessable Entity"
+            },
+            "400":{
+              "description": "Invalid Credentials!"
+            },
+            "500":{
+              "description": "User login failed!!"
+            }
+          }
+        }
+      },
+      "checks/{id}": {
+        "delete": {
+          "summary": "Edit check",
+          "tags": [
+            "Checks"
+          ],
+          "description": "Edit check",
+          "parameters": [
+            {
+              "name": "name",
+              "in": "body",
+              "schema": {
+                "$ref": "#/definitions/Check"
+              }
+            },
+            {
+              "name": "token",
+              "in": "header"
+            }
+          ],
+          "produces": [
+            "application/json"
+          ],
+          "responses": {
+            "200": {
+              "description": "Login Success"
+            },
+            "422":{
+              "description": "Unprocessable Entity"
+            },
+            "400":{
+              "description": "Invalid Credentials!"
+            },
+            "500":{
+              "description": "User login failed!!"
+            }
+          }
+        }
+      },
+      "report": {
+        "get": {
+          "summary": "Edit check",
+          "tags": [
+            "Checks"
+          ],
+          "description": "Get Report",
+          "parameters": [
+            {
+              "name": "name",
+              "in": "body",
+              "schema": {
+                "$ref": "#/definitions/Check"
+              }
+            },
+            {
+              "name": "token",
+              "in": "header"
+            }
+          ],
+          "produces": [
+            "application/json"
+          ],
+          "responses": {
+            "200": {
+              "description": "Login Success"
+            },
+            "422":{
+              "description": "Unprocessable Entity"
+            },
+            "400":{
+              "description": "Invalid Credentials!"
+            },
+            "500":{
+              "description": "User login failed!!"
+            }
           }
         }
       }
-    }
   },
+  
 
     "definitions": {
       "UserLogin": {
@@ -189,6 +388,48 @@
         "properties": {
           "message": {
             "type": "string"
+          }
+        }
+      },
+      "Check":{
+        "properties": {
+          "name": {
+            "type": "string"
+          },
+          "url": {
+            "type": "string"
+          },
+          "protocol": {
+            "type": "string"
+          },
+          "path": {
+            "type": "string"
+          },
+          "port": {
+            "type": "string"
+          },
+          "webhook": {
+            "type": "string"
+          },
+          "threshold": {
+            "type": "string"
+          },
+          "authentication": {
+            "type": "string"
+          },
+          "httpHeaders":{
+            "type": "string"
+          },
+          "assert":{
+            "type": "string"
+          },
+          "tags":{
+            "type": "string"
+          },
+          "ignoreSSL":{
+            "type": "boolean",
+            "default": true
+
           }
         }
       }
